# ddcrust

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
.github/workflows/: docker.yml  rust.yml
src/: lib.rs  main.rs
src/services/: dyndns2.rs  mod.rs
