[package]
name = "ddcrust"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full", "time"] }
toml = "0.8.2"
url = { version = "2.4.1", features = ["serde"] }
